Refactor for more simplicity and clarity.
Changes:
* Remove unnecessary ConsistencyFile.generate overloads
* standardize all diff functions to use byte arrays
* add clarifying parameter comments
* restructure unit tests visually
BUG: 522785838
GWSQ_IGNORES: mschlaffer@google.com
PiperOrigin-RevId: 955851345
Change-Id: I8e62aa2b6d0b828397f0ddbb07f62523e8922df3